syntax = "proto3";

package fluence.proxy.grpc;

// TODO add onComplete and onError messages, like in reactive streaming

message WebsocketMessage {
    string service = 1;
    string method = 2;
    int64 requestId = 3;
    oneof response {
        bytes payload = 10;
        string error = 11;
    }
}